# spotify_Ai_DJ

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/ai_year_wise_dj/: __init__.py  __main__.py  analysis.py  api.py  app.py  config.py  matcher.py  models.py  spotify_service.py
src/ai_year_wise_dj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_api.py  test_app.py  test_config.py  test_matcher.py  test_spotify_service.py
