[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-year-wise-dj"
version = "0.1.0"
description = "AI DJ backend for year-aware Spotify transitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "spotipy>=2.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
